# erome

./: README.md  pyproject.toml  requirements.txt  setup.cfg
erome/: __init__.py  client.py  core.py  exceptions.py  models.py  parsers.py  transport.py  types.py
tests/: async.py  sync.py
