[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erome"
version = "0.1.1"
description = "A lightweight, robust Python wrapper for Erome.com, supporting both synchronous and asynchronous operations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "pydantic>=2.1"
]
authors = [
    {name="Dankaristic"}
]
license = {text="MIT"}
keywords = ["erome", "wrapper", "api", "async", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/dankaristic/erome"
Repository = "https://github.com/dankaristic/erome"
"Bug Tracker" = "https://github.com/dankaristic/erome/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["erome*"]
